# deepin-rlocate

./: AUTHORS  ChangeLog  Changelog.slocate  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
contrib/: rlocate.debian  rlocate.gentoo  rlocate.redhat  rlocate.slackware  rlocate.suse
debian/: README.Debian  changelog  control  control.modules.in  copyright  cron.daily  postinst  postrm  preinst  prerm  rlocate-source.override  rlocate.dirs  rlocate.init.d  rlocate.links  rlocate.override  rules
doc/: Makefile.am  Makefile.in  rlocate.html  rlocate.pod
doc/man/: Makefile.am  Makefile.in  rlocate-checkpoint.1  rlocate.1  rlocated.1  updatedb.1
m4/: rlocate.m4
src/: Makefile.am  Makefile.in  cmds.c  cmds.h  conf.c  conf.h  install-cron.sh.in  pidfile.c  pidfile.h  rlocate.c  rlocate.cron  rlocate.h  slocate.c  slocate.h  utils.c  utils.h
src/rlocate-daemon/: Makefile.am  Makefile.in  rlocated.c
src/rlocate-module/: Makefile  Makefile.am  Makefile.in  Makefile.kernel  dkms.conf  rlocate.c
src/rlocate-scripts/: Makefile  Makefile.am  Makefile.in  rlocate-checkpoint  rlocate-checkpoint.in
